--- a/package.json
+++ b/package.json
@@ -3,8 +3,10 @@
   "version": "1.0.0",
   "description": "Recepcionistas e médicos em hospitais e unidades de saúde têm dificuldade em organizar a ordem de atendimento quando pacientes urgentes e não urgentes estão misturados. Isso pode causar atendimentos desordenados, aumento do tempo de espera para casos críticos e risco á vida humana.",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/server.js",
+    "start": "node src/server.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +21,8 @@
   "homepage": "https://github.com/StefaniPm/desenvolvimento-web-2025#readme",
   "dependencies": {
     "express": "^5.1.0"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
