reset_data_base

--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
+DB_ADMIN_DATABASE=postgres
 PORT=3000
 PGHOST=localhost
 PGPORT=5432
 PGDATABASE=triagem_db
 PGUSER=postgres
 PGPASSWORD=17082025
+
+PSQL_PATH="C:\Program Files\PostgreSQL\17\bin\psql.exe"
+
